--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,3 +1,4 @@
+set-option -g default-shell $SHELL
 set-option -g status-position top
 set -g mouse on
 set -as terminal-overrides ",xterm*:Tc"
@@ -38,6 +39,10 @@ set -g status-left-length 100
 set -g status-left ""
 set -g status-right "#{E:@catppuccin_status_application}"
 set -ag status-right "#{E:@catppuccin_status_session}"
+
+# tmux-sessionx
+set -g @sessionx-bind 'o'
+set -g @sessionx-zoxide-mode 'on'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
