--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -17,6 +17,22 @@ bind-key C-a send-prefix    # ensure that we can send Ctrl-A to other apps or th
 set -g base-index 1
 setw -g pane-base-index 1
 
+# sesh
+bind-key "o" run-shell "sesh connect \"$(
+  sesh list --icons | fzf-tmux -p 80%,70% \
+    --no-sort --ansi --border-label ' sesh ' --prompt '⚡  ' \
+    --header '  ^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
+    --bind 'tab:down,btab:up' \
+    --bind 'ctrl-a:change-prompt(⚡  )+reload(sesh list --icons)' \
+    --bind 'ctrl-t:change-prompt(🪟  )+reload(sesh list -t --icons)' \
+    --bind 'ctrl-g:change-prompt(⚙️  )+reload(sesh list -c --icons)' \
+    --bind 'ctrl-x:change-prompt(📁  )+reload(sesh list -z --icons)' \
+    --bind 'ctrl-f:change-prompt(🔎  )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
+    --bind 'ctrl-d:execute(tmux kill-session -t {2..})+change-prompt(⚡  )+reload(sesh list --icons)' \
+    --preview-window 'right:55%' \
+    --preview 'sesh preview {}'
+)\""
+
 # bind -n M-0 select-window -t 0
 # bind -n M-1 select-window -t 1
 # bind -n M-2 select-window -t 2
@@ -32,7 +48,7 @@ setw -g pane-base-index 1
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'omerxx/tmux-sessionx'
+# set -g @plugin 'omerxx/tmux-sessionx'
 
 # Configure the catppuccin plugin
 set -g @catppuccin_flavor "mocha"
@@ -47,8 +63,8 @@ set -g status-right "#{E:@catppuccin_status_application}"
 set -ag status-right "#{E:@catppuccin_status_session}"
 
 # tmux-sessionx
-set -g @sessionx-bind 'o'
-set -g @sessionx-zoxide-mode 'on'
+# set -g @sessionx-bind 'o'
+# set -g @sessionx-zoxide-mode 'on'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
