--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -17,32 +17,23 @@ bind-key C-a send-prefix    # ensure that we can send Ctrl-A to other apps or th
 set -g base-index 1
 setw -g pane-base-index 1
 
-# sesh
-bind-key "o" run-shell "sesh connect \"$(
-  sesh list --icons | fzf-tmux -p 80%,70% \
-    --no-sort --ansi --border-label ' sesh ' --prompt '⚡  ' \
-    --header '  ^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
-    --bind 'tab:down,btab:up' \
-    --bind 'ctrl-a:change-prompt(⚡  )+reload(sesh list --icons)' \
-    --bind 'ctrl-t:change-prompt(🪟  )+reload(sesh list -t --icons)' \
-    --bind 'ctrl-g:change-prompt(⚙️  )+reload(sesh list -c --icons)' \
-    --bind 'ctrl-x:change-prompt(📁  )+reload(sesh list -z --icons)' \
-    --bind 'ctrl-f:change-prompt(🔎  )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
-    --bind 'ctrl-d:execute(tmux kill-session -t {2..})+change-prompt(⚡  )+reload(sesh list --icons)' \
-    --preview-window 'right:55%' \
-    --preview 'sesh preview {}'
-)\""
+bind-key -r o run-shell "~/.local/scripts/tmux-sessionizer"
 
-# bind -n M-0 select-window -t 0
-# bind -n M-1 select-window -t 1
-# bind -n M-2 select-window -t 2
-# bind -n M-3 select-window -t 3
-# bind -n M-4 select-window -t 4
-# bind -n M-5 select-window -t 5
-# bind -n M-6 select-window -t 6
-# bind -n M-7 select-window -t 7
-# bind -n M-8 select-window -t 8
-# bind -n M-9 select-window -t 9
+# sesh
+# bind-key "o" run-shell "sesh connect \"$(
+#   sesh list --icons | fzf-tmux -p 80%,70% \
+#     --no-sort --ansi --border-label ' sesh ' --prompt '⚡  ' \
+#     --header '  ^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
+#     --bind 'tab:down,btab:up' \
+#     --bind 'ctrl-a:change-prompt(⚡  )+reload(sesh list --icons)' \
+#     --bind 'ctrl-t:change-prompt(🪟  )+reload(sesh list -t --icons)' \
+#     --bind 'ctrl-g:change-prompt(⚙️  )+reload(sesh list -c --icons)' \
+#     --bind 'ctrl-x:change-prompt(📁  )+reload(sesh list -z --icons)' \
+#     --bind 'ctrl-f:change-prompt(🔎  )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
+#     --bind 'ctrl-d:execute(tmux kill-session -t {2..})+change-prompt(⚡  )+reload(sesh list --icons)' \
+#     --preview-window 'right:55%' \
+#     --preview 'sesh preview {}'
+# )\""
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
