--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -13,6 +13,11 @@ unbind-key C-b              # free the original bind-key key
 set-option -g prefix C-a    # setting the prefix from C-b to C-a
 bind-key C-a send-prefix    # ensure that we can send Ctrl-A to other apps or the shell that your interacting
 
+# Set new panes to open in current directory
+bind c new-window -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+
 # Start windows and panes at 1, not 0
 set -g base-index 1
 setw -g pane-base-index 1
