--- a/.tmux.conf
+++ b/.tmux.conf
@@ -63,4 +63,6 @@ set -ag status-right "#{E:@catppuccin_status_session}"
 # set -g @sessionx-zoxide-mode 'on'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+if "test ! -d ~/.tmux/plugins/tpm" \
+   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
 run '~/.tmux/plugins/tpm/tpm'
