--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,23 +22,23 @@ bind % split-window -h -c "#{pane_current_path}"
 set -g base-index 1
 setw -g pane-base-index 1
 
-bind-key -r o run-shell "~/.local/scripts/tmux-sessionizer"
+# bind-key -r o run-shell "~/.local/scripts/tmux-sessionizer"
 
 # sesh
-# bind-key "o" run-shell "sesh connect \"$(
-#   sesh list --icons | fzf-tmux -p 80%,70% \
-#     --no-sort --ansi --border-label ' sesh ' --prompt '⚡  ' \
-#     --header '  ^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
-#     --bind 'tab:down,btab:up' \
-#     --bind 'ctrl-a:change-prompt(⚡  )+reload(sesh list --icons)' \
-#     --bind 'ctrl-t:change-prompt(🪟  )+reload(sesh list -t --icons)' \
-#     --bind 'ctrl-g:change-prompt(⚙️  )+reload(sesh list -c --icons)' \
-#     --bind 'ctrl-x:change-prompt(📁  )+reload(sesh list -z --icons)' \
-#     --bind 'ctrl-f:change-prompt(🔎  )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
-#     --bind 'ctrl-d:execute(tmux kill-session -t {2..})+change-prompt(⚡  )+reload(sesh list --icons)' \
-#     --preview-window 'right:55%' \
-#     --preview 'sesh preview {}'
-# )\""
+bind-key "o" run-shell "sesh connect \"$(
+  sesh list --icons | fzf-tmux -p 80%,70% \
+    --no-sort --ansi --border-label ' sesh ' --prompt '⚡  ' \
+    --header '  ^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
+    --bind 'tab:down,btab:up' \
+    --bind 'ctrl-a:change-prompt(⚡  )+reload(sesh list --icons)' \
+    --bind 'ctrl-t:change-prompt(🪟  )+reload(sesh list -t --icons)' \
+    --bind 'ctrl-g:change-prompt(⚙️  )+reload(sesh list -c --icons)' \
+    --bind 'ctrl-x:change-prompt(📁  )+reload(sesh list -z --icons)' \
+    --bind 'ctrl-f:change-prompt(🔎  )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
+    --bind 'ctrl-d:execute(tmux kill-session -t {2..})+change-prompt(⚡  )+reload(sesh list --icons)' \
+    --preview-window 'right:55%' \
+    --preview 'sesh preview {}'
+)\""
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
