--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -13,3 +13,6 @@ theme = catppuccin-mocha
 
 confirm-close-surface = false
 clipboard-paste-protection = false
+
+fullscreen=true
+macos-non-native-fullscreen=visible-menu
