--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -9,7 +9,7 @@ cursor-style = block
 cursor-style-blink = false
 shell-integration-features = no-cursor
 
-theme = catppuccin-mocha.conf
+theme = Catppuccin Mocha
 
 confirm-close-surface = false
 clipboard-paste-protection = false
