--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,7 +5,7 @@ set -as terminal-overrides ",xterm*:Tc"
 set -sg escape-time 10
 set -g focus-events on
 setw -g mode-keys vi
-set -g history-limit 1000000     # increase history size (from 2,000)
+set -g history-limit 10000     # increase history size (from 2,000)
 set -g renumber-windows on       # renumber all windows when any window is closed
 set -g set-clipboard on          # use system clipboard
 
