--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2939,7 +2939,7 @@ font_size 16.0
 # END_KITTY_FONTS
 
 # Window
-# hide_window_decorations yes
+hide_window_decorations yes
 show_window_resize_notification no
 confirm_os_window_close 0
 window_padding_width 8
