--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2958,3 +2958,22 @@ enable_audio_bell no
 
 map kitty_mod+t new_tab_with_cwd
 map cmd+t       new_tab_with_cwd
+
+allow_remote_control yes
+listen_on unix:/tmp/kitty
+
+# kitty-scrollback.nvim Kitten alias
+action_alias kitty_scrollback_nvim kitten  ~/.local/share/nvim/lazy/kitty-scrollback.nvim/python/kitty_scrollback_nvim.py
+
+# Browse scrollback buffer in nvim
+map kitty_mod+h kitty_scrollback_nvim
+# Browse output of the last shell command in nvim
+map kitty_mod+g kitty_scrollback_nvim --config ksb_builtin_last_cmd_output
+# Show clicked command output in nvim
+mouse_map ctrl+shift+right press ungrabbed combine : mouse_select_command_output : kitty_scrollback_nvim --config ksb_builtin_last_visited_cmd_output
+
+tab_bar_filter session:~ or session:^$
+
+map ctrl+p goto_session ~/.config/kitty/sessions/work.session
+map ctrl+o goto_session --sort-by=alphabetical
+startup_session ~/.config/kitty/sessions/main.session
