reset kitty map

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2974,6 +2974,6 @@ mouse_map ctrl+shift+right press ungrabbed combine : mouse_select_command_output
 
 tab_bar_filter session:~ or session:^$
 
-map ctrl+p goto_session ~/.config/kitty/sessions/work.session
-map ctrl+o goto_session --sort-by=alphabetical
+map kitty_mod+p goto_session ~/.config/kitty/sessions/work.session
+map kitty_mod+o goto_session --sort-by=alphabetical
 startup_session ~/.config/kitty/sessions/main.session
