--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2945,6 +2945,8 @@ confirm_os_window_close 0
 window_padding_width 8
 # window_padding_width 14
 # window_padding_height 14
+background_blur 32
+background_opacity 0.9
 
 # Minimal Tab bar styling 
 tab_bar_edge                top
