--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2960,6 +2960,8 @@ enable_audio_bell no
 
 map kitty_mod+t new_tab_with_cwd
 map cmd+t       new_tab_with_cwd
+map kitty_mod+enter new_window_with_cwd
+map cmd+enter       new_window_with_cwd
 
 allow_remote_control yes
 listen_on unix:/tmp/kitty
